--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,7 @@
         android:title="@string/title_list" />
 
     <item
-        android:id="@+id/navigation_serach"
+        android:id="@+id/navigation_search"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_search" />
 
