--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/navigation_list"
-        android:name="com.example.toktok.ui.list.ListFragment"
+        android:name="com.example.toktok.ui.list.StoreListFragment"
         android:label="@string/title_list"
-        tools:layout="@layout/fragment_list" />
+        tools:layout="@layout/fragment_store_list" />
 
     <fragment
         android:id="@+id/navigation_search"
