--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,26 +3,26 @@
 
     <item
         android:id="@+id/navigation_map"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/menu_icon_map"
         android:title="@string/title_map" />
 
     <item
         android:id="@+id/navigation_list"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/menu_icon_list"
         android:title="@string/title_list" />
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/menu_icon_search"
         android:title="@string/title_search" />
 
     <item
         android:id="@+id/navigation_favorite"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/menu_icon_favorite"
         android:title="@string/title_favorite" />
 
     <item
         android:id="@+id/navigation_info"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/menu_icon_info"
         android:title="@string/title_info" />
 </menu>
