--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="main_title_text_color">#FF007EF2</color>
+    <color name="main_devide_line_view_color">#FFF8F8F8</color>
+
+    <color name="item_title_text_color">#FF1C1D1E</color>
+    <color name="item_type_text_color">#FF959798</color>
+    <color name="item_describe_text_color">#FF1C1D1E</color>
+    <color name="item_discount_text_color">#FF007EF2</color>
+
 </resources>
