--- a/app/src/main/res/drawable/menu_icon_list.xml
+++ b/app/src/main/res/drawable/menu_icon_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:drawable="@drawable/list_checked" />
-    <item android:drawable="@drawable/list_normal"  />
+    <item android:drawable="@drawable/ic_menu_on_01" android:state_checked="true" />
+    <item android:drawable="@drawable/ic_menu_off_01" />
 </selector>
