--- a/app/src/main/res/layout/fragment_store_list.xml
+++ b/app/src/main/res/layout/fragment_store_list.xml
@@ -22,16 +22,16 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="리스트"
+            android:text="@string/title_list"
             android:textColor="@color/main_title_text_color"
             android:textSize="30dp" />
 
         <ImageView
-            android:layout_width="18dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="8dp"
-            android:src="@drawable/icon_filter" />
+            android:src="@drawable/btn_filter_28" />
     </LinearLayout>
 
     <View
@@ -48,7 +48,7 @@
         android:layout_height="0dp"
         android:fillViewport="true"
         android:orientation="vertical"
-        android:paddingHorizontal="32dp"
+
         android:paddingVertical="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -58,12 +58,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginHorizontal="18dp"
             android:orientation="vertical">
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -163,6 +164,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -262,6 +264,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -354,7 +357,6 @@
                         android:text="29% 할인"
                         android:textColor="@color/item_discount_text_color"
                         android:textSize="12dp" />
-
                 </LinearLayout>
             </LinearLayout>
 
