--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_map">
-
-    <fragment
-        android:id="@+id/navigation_map"
-        android:name="com.example.toktok.ui.map.MapFragment"
-        android:label="@string/title_map"
-        tools:layout="@layout/fragment_map" />
+    app:startDestination="@+id/navigation_list">
 
     <fragment
         android:id="@+id/navigation_list"
@@ -18,16 +12,16 @@
         tools:layout="@layout/fragment_store_list" />
 
     <fragment
+        android:id="@+id/navigation_map"
+        android:name="com.example.toktok.ui.map.MapFragment"
+        android:label="@string/title_map"
+        tools:layout="@layout/fragment_map" />
+
+    <fragment
         android:id="@+id/navigation_search"
         android:name="com.example.toktok.ui.search.SearchFragment"
         android:label="@string/title_search"
         tools:layout="@layout/fragment_search" />
-
-    <fragment
-        android:id="@+id/navigation_favorite"
-        android:name="com.example.toktok.ui.favorite.FavoriteFragment"
-        android:label="@string/title_favorite"
-        tools:layout="@layout/fragment_favorite" />
 
     <fragment
         android:id="@+id/navigation_info"
