Add store detail fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,7 @@
     <color name="sign_button_text_color">#FF007EF2</color>
     <color name="sign_button_background_color">#FFFFFFFF</color>
 
+    <color name="limit_time_text">#FFF20D0D</color>
+    <color name="text_title_detail">#FF1C1D1E</color>
+
 </resources>
