--- a/app/src/main/res/layout/layout_store_item.xml
+++ b/app/src/main/res/layout/layout_store_item.xml
@@ -10,8 +10,7 @@
         android:id="@+id/iv_thumbnail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/sample_store_image0" />
+        android:layout_marginBottom="5dp"/>
 
     <TextView
         android:id="@+id/tv_title"
