--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|bottom"
             android:layout_weight="1"
-            android:gravity="center"
             android:duplicateParentState="true"
+            android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
@@ -33,7 +33,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/title_list" />
+                android:text="@string/title_list"
+                android:textColor="@drawable/selector_bottom_navigation_text_color" />
         </LinearLayout>
 
         <LinearLayout
@@ -53,7 +54,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/title_map" />
+                android:text="@string/title_map"
+                android:textColor="@drawable/selector_bottom_navigation_text_color" />
         </LinearLayout>
 
         <LinearLayout
@@ -74,7 +76,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/title_search" />
+                android:text="@string/title_search"
+                android:textColor="@drawable/selector_bottom_navigation_text_color" />
         </LinearLayout>
 
         <LinearLayout
@@ -94,7 +97,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/title_info" />
+                android:text="@string/title_info"
+                android:textColor="@drawable/selector_bottom_navigation_text_color" />
         </LinearLayout>
     </LinearLayout>
 
