--- a/app/src/main/res/drawable/menu_icon_search.xml
+++ b/app/src/main/res/drawable/menu_icon_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/ic_menu_on_03" android:state_pressed="true" />
     <item android:drawable="@drawable/ic_menu_on_03" android:state_selected="true" />
     <item android:drawable="@drawable/ic_menu_off_03" />
 </selector>
