--- a/app/src/main/res/layout-hdpi/activity_main.xml
+++ b/app/src/main/res/layout-hdpi/activity_main.xml
@@ -8,8 +8,7 @@
     <LinearLayout
         android:id="@+id/ll_nav_bottom"
         android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -19,21 +18,22 @@
             android:id="@+id/ll_btn_store"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
             android:layout_weight="1"
             android:duplicateParentState="true"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="8dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="3dp"
                 android:src="@drawable/menu_icon_list" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/title_list"
+                android:text="@string/title_product"
                 android:textColor="@drawable/selector_bottom_navigation_text_color" />
         </LinearLayout>
 
@@ -41,10 +41,11 @@
             android:id="@+id/ll_btn_map"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
             android:layout_weight="1"
+            android:duplicateParentState="true"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="8dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -62,10 +63,11 @@
             android:id="@+id/ll_btn_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
             android:layout_weight="1"
+            android:duplicateParentState="true"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="8dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -84,10 +86,11 @@
             android:id="@+id/ll_btn_info"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
             android:layout_weight="1"
+            android:duplicateParentState="true"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingVertical="8dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -110,5 +113,4 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
