--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">yhjang1.shop</domain>
+        <domain includeSubdomains="true">dev.itok-tok.com</domain>
     </domain-config>
 
 </network-security-config>
