--- a/app/src/main/res/layout-hdpi/fragment_product_list.xml
+++ b/app/src/main/res/layout-hdpi/fragment_product_list.xml
@@ -63,4 +63,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/filter_recycler_view" />
 
+    <ImageButton
+        android:id="@+id/ibtn_my_bucket"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="18dp"
+        android:layout_marginBottom="20dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/btn_mybucket"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
