--- a/app/src/main/res/layout-hdpi/fragment_product_list.xml
+++ b/app/src/main/res/layout-hdpi/fragment_product_list.xml
@@ -10,21 +10,33 @@
         android:id="@+id/ll_top"
         android:layout_width="match_parent"
         android:layout_height="56dp"
+        android:layout_marginBottom="8dp"
         android:orientation="horizontal"
         android:paddingHorizontal="18dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="@string/title_product"
-            android:textColor="@color/main_title_text_color"
-            android:textSize="30dp" />
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@null" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="8dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/spinner" />
+        </LinearLayout>
 
         <ImageView
             android:layout_width="wrap_content"
