--- a/app/src/main/res/drawable-xhdpi/shape.xml
+++ b/app/src/main/res/drawable-xhdpi/shape.xml
@@ -2,5 +2,4 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
     <solid android:color="#007EF2"/>
-    <size android:width="150dp" android:height="150dp"/>
-</shape>
+    <size android:width="100dp" android:height="100dp"/></shape>
