--- a/app/src/main/res/layout-xhdpi/fragment_product_category_item.xml
+++ b/app/src/main/res/layout-xhdpi/fragment_product_category_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:textColor="#000"
-        android:textSize="16dp" />
+        android:lineHeight="17dp"
+        android:textSize="14dp" />
 
 </LinearLayout>
