--- a/app/src/main/res/layout-xhdpi/fragment_product_list.xml
+++ b/app/src/main/res/layout-xhdpi/fragment_product_list.xml
@@ -57,14 +57,28 @@
         app:layout_constraintTop_toBottomOf="@id/ll_top" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/category_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:scrollbars="horizontal"
+        android:paddingHorizontal="23dp"
+        android:paddingVertical="16dp"
+        app:layout_constraintBottom_toTopOf="@id/filter_recycler_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/v_line" />
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/filter_recycler_view"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:scrollbars="horizontal"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="16dp"
         app:layout_constraintBottom_toTopOf="@id/product_recycler_view"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/v_line" />
+        app:layout_constraintTop_toBottomOf="@id/category_recycler_view" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/product_recycler_view"
