--- a/app/src/main/res/layout-xhdpi/spinner_menu_item.xml
+++ b/app/src/main/res/layout-xhdpi/spinner_menu_item.xml
@@ -3,12 +3,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="left|center_vertical"
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
     android:gravity="center_vertical"
+    android:lineHeight="24dp"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp"
     android:textColor="@color/black"
-    android:paddingTop="15dp"
-    android:paddingBottom="17dp"
-    android:layout_marginTop="15dp"
-    android:layout_marginBottom="17dp"
     android:textSize="18dp">
 
 </TextView>
